Fix color in footer for contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -131,8 +131,8 @@ main {
 /* Footer */
 footer {
     width: 100%;
-    color: black;
-    background-color: rgb(182, 62, 7);
+    color: #2f0f0f;
+    background-color: #f38b43;
     font-size: 160%;
     text-align: center;
 }
